# Sl-ktbusken

./: .gitignore  LICENSE  README.md  demo_ancestry.py  demo_descendants.py  demo_dna_editor.py  demo_event_editor.py  demo_family_view.py  demo_media_editor.py  demo_person_editor.py  demo_place_translation_editor.py  demo_relationship.py  demo_source_translation_editor.py  pyproject.toml  spec-starter.md  test_output.txt
scripts/: demo_place_editor.py  demo_repository_editor.py  demo_source_editor.py
slaktbusken/: __main__.py  app.py
slaktbusken/gedcom/: __init__.py  exporter.py  importer.py  parser.py
slaktbusken/model/: __init__.py  dna.py  event.py  family.py  id_generator.py  media.py  name_parser.py  person.py  place.py  project.py  research_note.py  source.py  validators.py
slaktbusken/persistence/: app_settings_io.py  file_io.py  migration.py  serialization.py  settings_io.py  translation_io.py
slaktbusken/relationship/: __init__.py  calculator.py  graph_builder.py  kinship_terms.py
slaktbusken/scripts/: compile_ui.py
slaktbusken/services/: __init__.py  delete_service.py  event_media_service.py  export_service.py  import_service.py  lineage_computer.py  name_event_service.py  parent_service.py  photo_service.py  project_service.py  report_service.py  translation_service.py  validation_service.py
slaktbusken/ui/: context_menu_builder.py  diagram_panel.py  dna_match_display.py  main_window.py  person_list_panel.py  swedish_locale.py
tests/: conftest.py
tests/test_gedcom/: test_bug_condition_exploration.py  test_citation_translation.py  (+9 more)
(+222 files in other folders)
